tests/machine/x/pascal/cross_join_filter.error
line: 42
error: fpc error: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/machine/x/pascal/cross_join_filter.pas
cross_join_filter.pas(39,17) Error: identifier idents no member "n"
cross_join_filter.pas(39,27) Error: identifier idents no member "l"
cross_join_filter.pas(42) Fatal: There were 2 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode

